--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -177,11 +177,14 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Applicants\ListOfApplicantsPageView.cshtml" />
+    <Content Include="Views\Applicants\NoApplicants.cshtml" />
+    <Content Include="Views\Applicants\RegisterUserPageView.cshtml" />
+    <Content Include="Views\Applicants\SuccessfullyRegistered.cshtml" />
+    <Content Include="Views\Applicants\ApplicantDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Applicants\" />
-    <Folder Include="Views\Applicant\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
