--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Personals\AddPersonalsPageView.cshtml" />
     <Content Include="Views\Personals\PersonalDetailsSuccess.cshtml" />
     <Content Include="Views\Applicants\ResumeVM.cshtml" />
+    <Content Include="Views\Shared\_ResumeStyle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
