--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -152,10 +152,15 @@
     <Compile Include="Migrations\202205061235511_ModifyDisplayAnnotationsForPersonalModel.designer.cs">
       <DependentUpon>202205061235511_ModifyDisplayAnnotationsForPersonalModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205081416161_AddSkillDB.cs" />
+    <Compile Include="Migrations\202205081416161_AddSkillDB.designer.cs">
+      <DependentUpon>202205081416161_AddSkillDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Applicant.cs" />
     <Compile Include="Models\MyDbContext.cs" />
     <Compile Include="Models\Personal.cs" />
+    <Compile Include="Models\Skill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ResumeViewModel.cs" />
   </ItemGroup>
@@ -238,6 +243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205061235511_ModifyDisplayAnnotationsForPersonalModel.resx">
       <DependentUpon>202205061235511_ModifyDisplayAnnotationsForPersonalModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205081416161_AddSkillDB.resx">
+      <DependentUpon>202205081416161_AddSkillDB.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
