--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Controllers\ApplicantsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PersonalsController.cs" />
+    <Compile Include="Controllers\SkillsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -162,6 +163,8 @@
     <Compile Include="Models\Personal.cs" />
     <Compile Include="Models\Skill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\SkillsAddBatchViewModel.cs" />
+    <Compile Include="ViewModels\SkillsViewModel.cs" />
     <Compile Include="ViewModels\ResumeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -211,6 +214,10 @@
     <Content Include="Views\Personals\PersonalDetailsSuccess.cshtml" />
     <Content Include="Views\Applicants\ResumeVM.cshtml" />
     <Content Include="Views\Shared\_ResumeStyle.cshtml" />
+    <Content Include="Views\Skills\AddSkillsPageView.cshtml" />
+    <Content Include="Views\Shared\_ContactPopUp.cshtml" />
+    <Content Include="Views\Personals\PersonalDetailsError.cshtml" />
+    <Content Include="Views\Shared\_AddSkillRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
