--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -218,6 +218,7 @@
     <Content Include="Views\Shared\_ContactPopUp.cshtml" />
     <Content Include="Views\Personals\PersonalDetailsError.cshtml" />
     <Content Include="Views\Shared\_AddSkillRow.cshtml" />
+    <Content Include="Views\Skills\SkillDetailsSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
