• Add ajax requests to set and get Skill Row Counter

--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Globals.cs" />
     <Compile Include="Migrations\202205041246073_Initial.cs" />
     <Compile Include="Migrations\202205041246073_Initial.designer.cs">
       <DependentUpon>202205041246073_Initial.cs</DependentUpon>
@@ -274,7 +275,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:61902/</IISUrl>
+          <IISUrl>http://localhost:54943/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
