--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -222,11 +222,10 @@
     <Content Include="Views\Skills\SkillDetailsSuccess.cshtml" />
     <Content Include="Views\Skills\_SkillRowCount.cshtml" />
     <Content Include="Views\Skills\_SkillRowCreate.cshtml" />
-    <Content Include="Views\Skills\_TestPartial.cshtml" />
+    <Content Include="Views\Skills\_SkillEntry.cshtml" />
     <Content Include="Views\Skills\AddSkillsPageView - Copy.cshtml" />
     <Content Include="Views\Skills\_SkillRowCreator.cshtml" />
     <Content Include="Views\Skills\SkillAddedSuccessfully.cshtml" />
-    <Content Include="Views\Skills\_SkillRowCreatorAjax.cshtml" />
     <Content Include="Views\Skills\_SkillRowCreator2.cshtml" />
   </ItemGroup>
   <ItemGroup>
