• Continued improvement for adding Job Experience

--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -167,6 +167,10 @@
     <Compile Include="Migrations\202206120016175_AddJobData2.designer.cs">
       <DependentUpon>202206120016175_AddJobData2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206121249143_dbCheck.cs" />
+    <Compile Include="Migrations\202206121249143_dbCheck.designer.cs">
+      <DependentUpon>202206121249143_dbCheck.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Applicant.cs" />
     <Compile Include="Models\JobDetail.cs" />
@@ -281,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206120016175_AddJobData2.resx">
       <DependentUpon>202206120016175_AddJobData2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206121249143_dbCheck.resx">
+      <DependentUpon>202206121249143_dbCheck.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
