--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -252,7 +252,7 @@
     <Content Include="Views\Applicants\PersonalDetailsError.cshtml" />
     <Content Include="Views\Jobs\AddJobsPageView.cshtml" />
     <Content Include="Views\Jobs\_JobEntry.cshtml" />
-    <Content Include="Views\Applicants\UsernameTaken.cshtml" />
+    <Content Include="Views\Applicants\UsernameInvalid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
