--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -253,6 +253,7 @@
     <Content Include="Views\Jobs\AddJobsPageView.cshtml" />
     <Content Include="Views\Jobs\_JobEntry.cshtml" />
     <Content Include="Views\Applicants\UsernameInvalid.cshtml" />
+    <Content Include="Views\Personals\PersonalDetailsExist.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
