--- a/RésuméBuilder.csproj
+++ b/RésuméBuilder.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Personals\PersonalDetailsExist.cshtml" />
     <Content Include="Views\Personals\EditPersonalsPageView.cshtml" />
     <Content Include="Views\Skills\EditSkillsPageView.cshtml" />
+    <Content Include="Views\Jobs\EditJobsPageView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
